--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -6,17 +6,13 @@
 <script src="js/jquery-2.1.4.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/angular.js"></script>
-<script src="js/controllers/BuildingListCtrl.js"></script>
-</head>
-<body ng-controller="BuildingListCtrl">
-	<div class="container">
-		<h2>So ... here it is.</h2>
-		<br /> Nothing here {{'yet' + '!'}} <br /> Buildings:
-		<ul>
-			<li ng-repeat="building in buildings"><span>{{building.name}}</span>
-				<p>{{building.address}}</p></li>
-		</ul>
+<script src="js/angular-route.js"></script>
 
+<script src="js/savet7App.js"></script>
+<script src="js/controllers/BuildingListCtrl.js"></script>
+
+<body ng-controller="BuildingListCtrl">
+	<div class="container" ng-view>
 	</div>
 </body>
 </html>
