Simple directives added

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -18,6 +18,8 @@
 <script src="js/services/userService.js"></script>
 <script src="js/controllers/userCtrl.js"></script>
 
+<script src="js/directives/s7Building.js"></script>
+<script src="js/directives/s7Address.js"></script>
 
 <body ng-controller="userCtrl">
 
