--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -22,7 +22,7 @@
 <script src="js/directives/s7Building.js"></script>
 <script src="js/directives/s7Address.js"></script>
 
-<body ng-controller="userCtrl">
+<body>
 
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
@@ -40,7 +40,7 @@
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse"
-				id="bs-example-navbar-collapse-1">
+				id="bs-example-navbar-collapse-1" ng-controller="userCtrl">
 				<!-- 				
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
