--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="css/bootstrap.css"></link>
 <link rel="stylesheet" href="css/bootstrap-theme.css"></link>
 <link href="css/toastr.css" rel="stylesheet"/>
+<link rel="stylesheet" href="css/font-awesome.css">
 
 <script src="js/jquery-2.1.4.js"></script>
 <script src="js/bootstrap.js"></script>
@@ -13,6 +14,7 @@
 <script src="js/angular-route.js"></script>
 <script src="js/ui-bootstrap-tpls-0.14.3.js"></script>
 <script src="js/toastr.js"></script>
+<script src="js/angular-spinners.min.js"></script>
 
 <script src="js/savet7App.js"></script>
 <script src="js/controllers/buildingListCtrl.js"></script>
@@ -99,7 +101,8 @@
 		<!-- /.container-fluid -->
 	</nav>
 
-
+ <spinner name="s7Spinner"><i class="fa fa-spinner fa-spin fa-5x"></i></spinner>
+ 
 	<div class="container" ng-view></div>
 </body>
 </html>
