ok, out with the spinners for now ...

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Savet7 app</title>
 
+<link rel="stylesheet" href="css/savet7.css"></link>
 <link rel="stylesheet" href="css/bootstrap.css"></link>
 <link rel="stylesheet" href="css/bootstrap-theme.css"></link>
 <link href="css/toastr.css" rel="stylesheet"/>
@@ -101,7 +102,7 @@
 		<!-- /.container-fluid -->
 	</nav>
 
- <spinner name="s7Spinner"><i class="fa fa-spinner fa-spin fa-5x"></i></spinner>
+ <spinner name="s7Spinner"><div id="spinnerDiv"><h1 class="spinner-loader"><i class="fa fa-spinner fa-spin fa-2x"></i></h1></div></spinner>
  
 	<div class="container" ng-view></div>
 </body>
