--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -18,6 +18,7 @@
 <script src="js/angular-spinners.min.js"></script>
 <script src="js/angular-translate.js"></script>
 <script src="js/angular-translate-loader-static-files.js"></script>
+<script src="js/angular-sanitize.js"></script>
 
 <script src="js/savet7App.js"></script>
 <script src="js/controllers/buildingListCtrl.js"></script>
