Fixed flickering problem when opening dropdown menu

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -101,7 +101,7 @@
 				<p class="navbar-text navbar-right" ng-if="loggedIn">{{'APP_LOGIN_AS' | translate}} <b>{{user.username}}</b></p>
 				<ul class="nav navbar-nav navbar-right" ng-controller="langCtrl">
 <!-- 					<li class="navbar-text">{{'APP_LANGUAGE' | translate }}:</li> -->
-					<li class="dropdown"><a href="#" class="dropdown-toggle"
+					<li class="dropdown"><a class="dropdown-toggle"
 						data-toggle="dropdown" role="button" aria-haspopup="true"
 						aria-expanded="false">{{'APP_LANG_CURRENT' | translate}}<span class="caret"></span></a>
 						<ul class="dropdown-menu">
