--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -19,6 +19,9 @@
 <script src="js/angular-translate.js"></script>
 <script src="js/angular-translate-loader-static-files.js"></script>
 <script src="js/angular-sanitize.js"></script>
+<script src="js/angular-cookies.js"></script>
+<script src="js/angular-translate-storage-cookie.js"></script>
+<script src="js/angular-translate-storage-local.js"></script>
 
 <script src="js/savet7App.js"></script>
 <script src="js/controllers/buildingListCtrl.js"></script>
