--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -6,26 +6,28 @@
 <link rel="stylesheet" href="css/savet7.css"></link>
 <link rel="stylesheet" href="css/bootstrap.css"></link>
 <link rel="stylesheet" href="css/bootstrap-theme.css"></link>
-<link href="css/toastr.css" rel="stylesheet"/>
+<link rel="stylesheet" href="css/toastr.css" />
 <link rel="stylesheet" href="css/font-awesome.css">
 
-<script src="js/jquery-2.1.4.js"></script>
-<script src="js/bootstrap.js"></script>
-<script src="js/angular.js"></script>
-<script src="js/angular-route.js"></script>
-<script src="js/ui-bootstrap-tpls-0.14.3.js"></script>
-<script src="js/toastr.js"></script>
-<script src="js/angular-spinners.min.js"></script>
-<script src="js/angular-translate.js"></script>
-<script src="js/angular-translate-loader-static-files.js"></script>
-<script src="js/angular-sanitize.js"></script>
-<script src="js/angular-cookies.js"></script>
-<script src="js/angular-translate-storage-cookie.js"></script>
-<script src="js/angular-translate-storage-local.js"></script>
+<script src="js/lib/jquery-2.1.4.js"></script>
+<script src="js/lib/bootstrap.js"></script>
+<script src="js/lib/angular.js"></script>
+<script src="js/lib/angular-route.js"></script>
+<script src="js/lib/ui-bootstrap-tpls-0.14.3.js"></script>
+<script src="js/lib/toastr.js"></script>
+<script src="js/lib/angular-spinners.min.js"></script>
+<script src="js/lib/angular-translate.js"></script>
+<script src="js/lib/angular-translate-loader-static-files.js"></script>
+<script src="js/lib/angular-sanitize.js"></script>
+<script src="js/lib/angular-cookies.js"></script>
+<script src="js/lib/angular-translate-storage-cookie.js"></script>
+<script src="js/lib/angular-translate-storage-local.js"></script>
 
 <script src="js/savet7App.js"></script>
-<script src="js/controllers/buildingListCtrl.js"></script>
+
 <script src="js/services/userService.js"></script>
+
+<script src="js/controllers/buildingListCtrl.js"></script>
 <script src="js/controllers/userCtrl.js"></script>
 <script src="js/controllers/langCtrl.js"></script>
 
