wait screen added, and hooked up to http request for "api"

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -26,6 +26,7 @@
 <script src="js/savet7App.js"></script>
 
 <script src="js/services/userService.js"></script>
+<script src="js/services/waitService.js"></script>
 
 <script src="js/controllers/buildingListCtrl.js"></script>
 <script src="js/controllers/userCtrl.js"></script>
