Address creation not working yet

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -31,6 +31,7 @@
 <script src="js/controllers/buildingListCtrl.js"></script>
 <script src="js/controllers/userCtrl.js"></script>
 <script src="js/controllers/langCtrl.js"></script>
+<script src="js/controllers/addressCtrl.js"></script>
 
 <script src="js/directives/s7Building.js"></script>
 <script src="js/directives/s7Address.js"></script>
