Added test for spinner service

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -15,13 +15,14 @@
 <script src="js/lib/angular-route.js"></script>
 <script src="js/lib/ui-bootstrap-tpls-0.14.3.js"></script>
 <script src="js/lib/toastr.js"></script>
-<script src="js/lib/angular-spinners.min.js"></script>
+<script src="js/lib/angular-spinners.js"></script>
 <script src="js/lib/angular-translate.js"></script>
 <script src="js/lib/angular-translate-loader-static-files.js"></script>
 <script src="js/lib/angular-sanitize.js"></script>
 <script src="js/lib/angular-cookies.js"></script>
 <script src="js/lib/angular-translate-storage-cookie.js"></script>
 <script src="js/lib/angular-translate-storage-local.js"></script>
+<script src="js/lib/underscore-min.js"></script>
 
 <script src="js/savet7App.js"></script>
 
