--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -28,6 +28,8 @@
 
 <script src="js/services/userService.js"></script>
 <script src="js/services/waitService.js"></script>
+<script src="js/services/addressService.js"></script>
+<script src="js/services/formHelperService.js"></script>
 
 <script src="js/controllers/buildingListCtrl.js"></script>
 <script src="js/controllers/userCtrl.js"></script>
