--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="savet7App">
 <head>
-<title>{{'APP_TITLE' | translate}}</title>
+<title>Savet7</title>
 
 <link rel="stylesheet" href="css/savet7.css"></link>
 <link rel="stylesheet" href="css/bootstrap.css"></link>
@@ -36,7 +36,6 @@
 <script src="js/controllers/langCtrl.js"></script>
 <script src="js/controllers/addressCtrl.js"></script>
 
-<script src="js/directives/s7Building.js"></script>
 <script src="js/directives/s7Address.js"></script>
 
 <body>
