Update (faulty one, just to test Heroku)

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -83,8 +83,8 @@
 				</form>
 				 -->
 				<ul class="nav navbar-nav navbar-right">
-					<li ng-if="!loggedIn"><a href="" ng-click="login()">{{'APP_LOGIN_LOGIN' | translate}}</a></li>
-					<li ng-if="loggedIn"><a href="" ng-click="logout()">{{'APP_LOGIN_LOGOUT' | translate}}</a></li>
+					<li ng-if="!loggedIn">XXX<a href="" ng-click="login()">{{'APP_LOGIN_LOGIN' | translate}}</a></li>
+					<li ng-if="loggedIn">XXX<a href="" ng-click="logout()">{{'APP_LOGIN_LOGOUT' | translate}}</a></li>
 				
 					<!-- <li ng-if="loggedIn" class="dropdown"><a href="#" class="dropdown-toggle"
 						data-toggle="dropdown" role="button" aria-haspopup="true"
