--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -83,8 +83,8 @@
 				</form>
 				 -->
 				<ul class="nav navbar-nav navbar-right">
-					<li ng-if="!loggedIn"><a href="" ng-click="login()">{{'APP_LOGIN_LOGIN' | translate}}</a></li>
-					<li ng-if="loggedIn"><a href="" ng-click="logout()">{{'APP_LOGIN_LOGOUT' | translate}}</a></li>
+					<li ng-if="!loggedIn"><a href="" ng-click="login()" id="loginLink">{{'APP_LOGIN_LOGIN' | translate}}</a></li>
+					<li ng-if="loggedIn"><a href="" ng-click="logout()" id="logoutLink">{{'APP_LOGIN_LOGOUT' | translate}}</a></li>
 				
 					<!-- <li ng-if="loggedIn" class="dropdown"><a href="#" class="dropdown-toggle"
 						data-toggle="dropdown" role="button" aria-haspopup="true"
@@ -108,12 +108,12 @@
  -->				
  
  					</ul>
-				<p class="navbar-text navbar-right" ng-if="loggedIn">{{'APP_LOGIN_AS' | translate}} <b>{{user.username}}</b></p>
+				<p class="navbar-text navbar-right" ng-if="loggedIn">{{'APP_LOGIN_AS' | translate}} <b id="usernameInNav">{{user.username}}</b></p>
 				<ul class="nav navbar-nav navbar-right" ng-controller="langCtrl">
 <!-- 					<li class="navbar-text">{{'APP_LANGUAGE' | translate }}:</li> -->
 					<li class="dropdown"><a class="dropdown-toggle"
 						data-toggle="dropdown" role="button" aria-haspopup="true"
-						aria-expanded="false">{{'APP_LANG_CURRENT' | translate}}<span class="caret"></span></a>
+						aria-expanded="false" id="langSelectLink">{{'APP_LANG_CURRENT' | translate}}<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li ng-class="{active : langData.langCd == 'en'}"><a ng-click="useLang('en')">{{'APP_LANG_ENGLISH' | translate}}</a></li>
 							<li ng-class="{active : langData.langCd == 'rs'}"><a ng-click="useLang('rs')">{{'APP_LANG_SERBIAN' | translate}}</a></li>
