--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -16,6 +16,10 @@
 
 <script src="js/lib/react.js"></script>
 <script src="js/lib/react-dom.js"></script>
+<script src="js/lib/redux_3.6.js"></script>
+
+<script src="js/s7App.js"></script>
+
 <body>
 
 	<nav class="navbar navbar-default">
