Initial Redux store, but now I have to introduce npm, nodejs, browserify gulp and the rest of the gang :(

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -24,6 +24,7 @@
 
 </body>
 
+<script type="text/babel" src="js/s7Store.js"></script>
 <script type="text/babel" src="js/s7App.js"></script>
 
 </html>
