--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Savet7</title>
+<title id='appTitle'>Savet7</title>
 <link rel="stylesheet" href="css/bundle.css"></link>
 <body>
 	<div id="s7App"></div>
